Окно рендера на F12; убрана чистка материалов по удалению последней существующей модели; #define в ComputeProgram; Макс. кол-во материалов (зависит от характеристик пк); модуль-тесты;